# as-me

./: .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
.claude-plugin/: plugin.json
commands/: analyze.md  as-me-analyze.md  as-me-evolution.md  as-me-memories.md  as-me-principles.md  evolution.md  memories.md  principles.md
hooks/: hooks.json  session-start.sh  stop.sh  user-prompt-submit.sh
skills/analyze/: SKILL.md
skills/as-me-analyze/: SKILL.md
skills/as-me-evolution/: SKILL.md
skills/as-me-memories/: SKILL.md
skills/as-me-memory-context/: SKILL.md
skills/as-me-principles/: SKILL.md
skills/memory-context/: SKILL.md
src/as_me/: __init__.py  cli.py  errors.py  logging.py  profile.py
src/as_me/analysis/: __init__.py  models.py  queue.py  runner.py  scheduler.py
src/as_me/conversation/: __init__.py  log.py  models.py  parser.py
src/as_me/extraction/: __init__.py  session_extractor.py
src/as_me/formatters/: __init__.py  evolution_formatter.py  memory_formatter.py  principle_formatter.py
src/as_me/hooks/: __init__.py  session_start.py  stop.py
src/as_me/memory/: __init__.py  confidence.py  decay.py  extractor.py  models.py  prompts.py  retriever.py  store.py  strengthening.py  tier_manager.py
src/as_me/principle/: __init__.py  aggregator.py  evidence_store.py  evolution.py  models.py  store.py
src/as_me/storage/: __init__.py  base.py  cache.py  cold_storage.py  index.py  json_store.py
tests/: __init__.py  conftest.py
tests/analysis/: __init__.py
